--- a/en.html
+++ b/en.html
@@ -91,11 +91,10 @@
         <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay contest</a><br>      
         <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">T-shirt contest</a><br>      
         <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br>
+        <p>Other registrations:</p>
         <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Artist Alley registration</a><br>
         <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay photo contest registration</a><br>
-        <!--<p>Other:</p>-->
         <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media pass registration</a><br>            
-        <a class="button" href="https://infoshow.info/en/anime-nights/faq" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/faq.png" alt="">FAQ</a><br>
 
 		<!--<br>
 		<br>-->
@@ -106,7 +105,8 @@
 		<a class="button button-yt" href="https://bit.ly/AnimeNightsYoutube" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.svg" alt="">YouTube</a><br>     
 		<a class="button button-tiktok" href="https://bit.ly/AnimeNightsTiktok" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/tiktok.svg" alt="">AnimeNights TikTok</a><br>
     <a class="button button-tiktok" href="https://bit.ly/InfoshowTiktok" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/tiktok.svg" alt="">InfoShow TikTok</a><br>
-
+    <a class="button" href="https://infoshow.info/en/anime-nights/faq" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/faq.png" alt="">FAQ</a><br>
+    <a class="button" href="https://infoshow.info/en/anime-nights" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/icon.png" alt="">InfoShow website</a><br> 
     <!--<br>
     <p>Take a look at 2024 "Anime Nights" AMV contest entries:</p>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=XcocLdh0-HqyXQMI&amp;list=PLNScQ1DfTsykhw5pt0VDOzuV5MT6KDR94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="max-width: 100%; width: 100%;"></iframe>
