--- a/en.html
+++ b/en.html
@@ -73,7 +73,7 @@
 
         <a class="button event" href="https://bit.ly/AnimeNights25" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/facebook.svg" alt="">Anime Nights'25 event page</a><br>
         <br>
-        <a class="button" href="https://bit.ly/AN25Suggest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/questionmark.png" alt="">Have any suggestions? Share them HERE!</a><br>     
+        <!-- <a class="button" href="https://bit.ly/AN25Suggest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/questionmark.png" alt="">Have any suggestions? Share them HERE!</a><br>      -->
         
 
         
@@ -105,6 +105,7 @@
 		<a class="button button-yt" href="https://bit.ly/AnimeNightsYoutube" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.svg" alt="">YouTube</a><br>     
 		<a class="button button-tiktok" href="https://bit.ly/AnimeNightsTiktok" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/tiktok.svg" alt="">AnimeNights TikTok</a><br>
     <a class="button button-tiktok" href="https://bit.ly/InfoshowTiktok" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/tiktok.svg" alt="">InfoShow TikTok</a><br>
+    <p>Other:</p>
     <a class="button" href="https://infoshow.info/en/anime-nights/faq" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/faq.png" alt="">FAQ</a><br>
     <a class="button" href="https://infoshow.info/en/anime-nights" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/icon.png" alt="">InfoShow website</a><br> 
     <!--<br>
