--- a/en.html
+++ b/en.html
@@ -89,7 +89,7 @@
         <p>Contests:</p>
 
         <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay contest</a><br>      
-        <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">T-shirt contest</a><br>      
+        <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">T-shirt contest</a><br>       -->
         <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br>
         <p>Other registrations:</p>
         <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Artist Alley registration</a><br>
