--- a/lt.html
+++ b/lt.html
@@ -91,7 +91,7 @@
         <p>Konkursai:</p>
 
         <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay konkurso registracija</a><br>      
-        <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">Marškinėlių konkurso registracija</a><br>      
+        <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">Marškinėlių konkurso registracija</a><br>       -->
         <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV konkurso registracija</a><br>
         <p>Kitos registracijos:</p>
         <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Menininkų alėjos registracija</a><br>
