remove artist alley

--- a/lt.html
+++ b/lt.html
@@ -95,7 +95,7 @@
         <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV konkurso registracija</a><br>
         <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay foto konkurso registracija</a><br>
         <p>Kitos registracijos:</p>
-        <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Menininkų alėjos registracija</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Menininkų alėjos registracija</a><br> -->
         <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media akreditacijos registracija</a><br>
 
 		<!--<br>
