--- a/en.html
+++ b/en.html
@@ -93,7 +93,7 @@
         <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br>
         <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay photo contest registration</a><br>
         <p>Other registrations:</p>
-        <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Artist Alley registration</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Artist Alley registration</a><br> -->
         <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media pass registration</a><br>            
 
 		<!--<br>
