--- a/lt.html
+++ b/lt.html
@@ -84,9 +84,9 @@
 
         <p>Registration to the games run by "123 Renginys"</p>
         <a class="button" href="https://forms.gle/Ldp9hathJy6eWGY67" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">12:45 session of "Blood on the Clocktower"</a><br> 
-        <a class="button" href="https://forms.gle/gwUgZghqPs7ngyyX7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">16:30 session of "Blood on the Clocktower"</a><br> 
-        <p>Registration to the games run by "RPG House"</p>
-        <a class="button" href="https://dndhouse.lt/animenights/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registration for all of their D&D one-shot sessions</a><br> -->
+        <a class="button" href="https://forms.gle/gwUgZghqPs7ngyyX7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">16:30 session of "Blood on the Clocktower"</a><br> -->
+        <p>Registracija į žaidimus vedamus "RPG House"</p>
+        <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registracija į D&D one-shotus ir Blood on the Clocktower sesijas</a><br>
 
         <p>Konkursai:</p>
 
