--- a/en.html
+++ b/en.html
@@ -88,7 +88,7 @@
 
         <p>Contests:</p>
 
-        <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay contest</a><br>      
+        <!-- <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay contest</a><br>       -->
         <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">T-shirt contest</a><br>       -->
         <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br>
         <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay photo contest registration</a><br>
