--- a/en.html
+++ b/en.html
@@ -86,12 +86,12 @@
         <p>Registration to the games run by "RPG House"</p>
         <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registration to D&D one-shots and Blood on the Clocktower sessions</a><br>
 
-        <p>Contests:</p>
+        <!-- <p>Contests:</p> -->
 
         <!-- <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay contest</a><br>       -->
         <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">T-shirt contest</a><br>       -->
-        <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br>
-        <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay photo contest registration</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br> -->
+        <!-- <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay photo contest registration</a><br> -->
         <p>Other registrations:</p>
         <!-- <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Artist Alley registration</a><br> -->
         <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media pass registration</a><br>            
