--- a/lt.html
+++ b/lt.html
@@ -88,12 +88,12 @@
         <p>Registracija į žaidimus vedamus "RPG House"</p>
         <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registracija į D&D one-shotus ir Blood on the Clocktower sesijas</a><br>
 
-        <p>Konkursai:</p>
+        <!-- <p>Konkursai:</p> -->
 
         <!-- <a class="button" href="https://bit.ly/AN25CosplayContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/crown.png" alt="">Cosplay konkurso registracija</a><br>       -->
         <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">Marškinėlių konkurso registracija</a><br>       -->
-        <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV konkurso registracija</a><br>
-        <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay foto konkurso registracija</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV konkurso registracija</a><br> -->
+        <!-- <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay foto konkurso registracija</a><br> -->
         <p>Kitos registracijos:</p>
         <!-- <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Menininkų alėjos registracija</a><br> -->
         <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media akreditacijos registracija</a><br>
