--- a/en.html
+++ b/en.html
@@ -78,7 +78,7 @@
 
         
         <a class="button" href="https://bit.ly/AN25Tickets" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/ticket.png" alt="">Buy night part tickets HERE!</a><br>
-        <a class="button" href="https://bit.ly/AN25Live" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Watch livestream HERE!</a><br>
+        <a class="button" href="https://bit.ly/AN25live" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Watch livestream HERE!</a><br>
         <!--<a class="button" href="https://bit.ly/AN24movies" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Movie list!</a><br>
 
         <p>Registration to the games run by "123 Renginys"</p>
