--- a/en.html
+++ b/en.html
@@ -114,7 +114,7 @@
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=XcocLdh0-HqyXQMI&amp;list=PLNScQ1DfTsykhw5pt0VDOzuV5MT6KDR94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="max-width: 100%; width: 100%;"></iframe>
     <br>
 		<br>-->
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/jygCUWQ7GLc?si=X1WIm6LnViY2pdDH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="max-width: 100%; width: 100%;"></iframe>
+		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dz4M-DPdJYw?si=yejtjOeZk6hm675n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="max-width: 100%; width: 100%;"></iframe>
 
      
 		<!--<p>KTU FSA InfoSA projects:</p>
