--- a/en.html
+++ b/en.html
@@ -77,15 +77,15 @@
         
 
         
-        <a class="button" href="https://bit.ly/AN25Tickets" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/ticket.png" alt="">Buy night part tickets HERE!</a><br>
-        <a class="button" href="https://bit.ly/AN25live" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Watch livestream HERE!</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25Tickets" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/ticket.png" alt="">Buy night part tickets HERE!</a><br> -->
+        <!-- <a class="button" href="https://bit.ly/AN25live" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Watch livestream HERE!</a><br> -->
         <!--<a class="button" href="https://bit.ly/AN24movies" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Movie list!</a><br>
 
         <p>Registration to the games run by "123 Renginys"</p>
         <a class="button" href="https://forms.gle/Ldp9hathJy6eWGY67" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">12:45 session of "Blood on the Clocktower"</a><br> 
         <a class="button" href="https://forms.gle/gwUgZghqPs7ngyyX7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">16:30 session of "Blood on the Clocktower"</a><br> -->
-        <p>Registration to the games run by "RPG House"</p>
-        <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registration to D&D one-shots and Blood on the Clocktower sessions</a><br>
+        <!-- <p>Registration to the games run by "RPG House"</p> -->
+        <!-- <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registration to D&D one-shots and Blood on the Clocktower sessions</a><br> -->
 
         <!-- <p>Contests:</p> -->
 
@@ -93,9 +93,9 @@
         <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">T-shirt contest</a><br>       -->
         <!-- <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV contest</a><br> -->
         <!-- <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay photo contest registration</a><br> -->
-        <p>Other registrations:</p>
+        <!-- <p>Other registrations:</p> -->
         <!-- <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Artist Alley registration</a><br> -->
-        <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media pass registration</a><br>            
+        <!-- <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media pass registration</a><br>             -->
 
 		<!--<br>
 		<br>-->
