--- a/lt.html
+++ b/lt.html
@@ -79,15 +79,15 @@
 
 
 
-        <a class="button" href="https://bit.ly/AN25Tickets" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/ticket.png" alt="">Pirk naktinės dalies bilietus ČIA!</a><br>
-        <a class="button" href="https://bit.ly/AN25live" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Žiūrėk tiesioginę transliaciją ČIA!</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25Tickets" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/ticket.png" alt="">Pirk naktinės dalies bilietus ČIA!</a><br> -->
+        <!-- <a class="button" href="https://bit.ly/AN25live" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Žiūrėk tiesioginę transliaciją ČIA!</a><br> -->
         <!--<a class="button" href="https://bit.ly/AN24movies" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/moviei.png" alt="">Movie list!</a><br>
 
         <p>Registration to the games run by "123 Renginys"</p>
         <a class="button" href="https://forms.gle/Ldp9hathJy6eWGY67" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">12:45 session of "Blood on the Clocktower"</a><br> 
         <a class="button" href="https://forms.gle/gwUgZghqPs7ngyyX7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/sword.png" alt="">16:30 session of "Blood on the Clocktower"</a><br> -->
-        <p>Registracija į žaidimus vedamus "RPG House"</p>
-        <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registracija į D&D one-shotus ir Blood on the Clocktower sesijas</a><br>
+        <!-- <p>Registracija į žaidimus vedamus "RPG House"</p> -->
+        <!-- <a class="button" href="https://bit.ly/AN25rpghouse" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/rpghouse.png" alt="">registracija į D&D one-shotus ir Blood on the Clocktower sesijas</a><br> -->
 
         <!-- <p>Konkursai:</p> -->
 
@@ -95,9 +95,9 @@
         <!-- <a class="button" href="https://bit.ly/AN25TshirtContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/tshirt.png" alt="">Marškinėlių konkurso registracija</a><br>       -->
         <!-- <a class="button" href="https://bit.ly/AN25AMVContest" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/cinema.png" alt="">AMV konkurso registracija</a><br> -->
         <!-- <a class="button" href="https://bit.ly/AN25Foto" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/camera.png" alt="">Cosplay foto konkurso registracija</a><br> -->
-        <p>Kitos registracijos:</p>
+        <!-- <p>Kitos registracijos:</p> -->
         <!-- <a class="button" href="https://bit.ly/AN25ArtistAlley" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/paint.png" alt="">Menininkų alėjos registracija</a><br> -->
-        <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media akreditacijos registracija</a><br>
+        <!-- <a class="button" href="https://bit.ly/AN25Media" target="_blank" rel="noopener" role="button"><img class="icon" src="images/musu/akred.png" alt="">Media akreditacijos registracija</a><br> -->
 
 		<!--<br>
 		<br>-->
